--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   amplify_flutter: ^0.6.0
   amplify_datastore: ^0.6.0
   amplify_api: ^0.6.0
+  amplify_auth_cognito: ^0.6.0
+
 
 dev_dependencies:
   flutter_test:
