--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   amplify_datastore: ^0.6.0
   amplify_api: ^0.6.0
   amplify_auth_cognito: ^0.6.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
